feat(UABOT-137): add all endpoints and new flow

--- a/.env.template
+++ b/.env.template
@@ -89,6 +89,24 @@ S3_PATH=
 AWS_REGION=
 
 
+##
+# Url of the frontend application.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {string}
+FRONTEND_HOST=
+
+##
+# Url of the frontend application.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {string}
+WEB_VIEW_URL=
+
 
 ######
 ######
