--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "escape-html": "^1.0.3",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "ffmpeg-static": "^5.1.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
