refactor(UABOT-137): code refactoring after review

--- a/.env.template
+++ b/.env.template
@@ -89,25 +89,6 @@ S3_PATH=
 AWS_REGION=
 
 
-##
-# Url of the frontend application.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-#
-# @optional {string}
-FRONTEND_HOST=
-
-##
-# Url of the frontend application.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-#
-# @optional {string}
-WEB_VIEW_URL=
-
-
 ######
 ######
 ###### Used only for bot process. 🤖
@@ -172,6 +153,24 @@ USERS_FOR_SWINDLERS_STATISTIC_WHITELIST=00000001, 0000002, -10000000
 #
 # @optional {string}
 USERS_WHITELIST=00000001, 0000002, -10000000
+
+##
+# Url of the frontend application.
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
+# @optional {string}
+FRONTEND_HOST=
+
+##
+# Url of the frontend application.
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
+# @optional {string}
+WEB_VIEW_URL=
 
 
 ######
