--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "ts-node": {
-    "swc": true
+    "swc": true,
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "compilerOptions": {
     "target": "ES2015",
     "outDir": "dist",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "strictNullChecks": true,
@@ -30,7 +33,6 @@
     "baseUrl": "src"
   },
   "moduleResolution": "node",
-  "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Recommended",
   "include": [
     "src/**/*",
