--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "prepare": "husky install",
     "test": "jest",
     "health-check": "echo health-check",
-    "lint": "npm-run-all --parallel lint:js",
+    "lint": "npm-run-all --parallel lint:js lint:type-check",
     "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
     "lint:commit-name": "commitlint --edit",
     "track-time": "smile-track",
     "lint:js": "eslint . --cache --quiet",
-    "lint:js:fix": "npm run lint:js -- --fix"
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@grammyjs/menu": "^1.1.2",
