--- a/.env.template
+++ b/.env.template
@@ -247,6 +247,17 @@ DEBUG=
 DEBUG_MIDDLEWARE=
 
 ##
+# A feature to disable calls to the Google API 
+# Used when the bot does not have access to Google credits.
+#
+# Used for both bot and server process. 🤖 🖥️
+#
+# Only for testing. 🧪
+#
+# @optional {boolean} = false
+DISABLE_GOOGLE_API=
+
+##
 # Used to skip logging into logs chat for local development.
 #
 # Used only for bot process. 🤖
