feat: add disable alarm api features to env and to alarm.service

--- a/.env.template
+++ b/.env.template
@@ -258,6 +258,16 @@ DEBUG_MIDDLEWARE=
 DISABLE_GOOGLE_API=
 
 ##
+# A feature to disable calls to the alarm air raid API 
+# Used when the bot does not have ALARM_KEY.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+# 
+# @optional {boolean} = false
+DISABLE_ALARM_API=
+
+##
 # Used to skip logging into logs chat for local development.
 #
 # Used only for bot process. 🤖
