--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "experimentalSpecifierResolution": "node"
   },
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ES2022",
     "outDir": "dist",
+    "lib": ["es2022"],
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -32,7 +33,6 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "src"
   },
-  "moduleResolution": "node",
   "display": "Recommended",
   "include": [
     "src/**/*",
